Image document size apply page zoom on android

Apply PageZoomFactor to image div width for use-zoom-for-dsf
When use-zoom-for-dsf enabled, the visual viewport doesn't have
the device scale factor (DSF) applied, so we need to apply
PageZoomFactor when decide image container size.

This change doesn't need to be under the flag, because when the flag
is disabled, PageZoomFactor is 1.

Bug: 844461
Change-Id: I1e23cafdef387b97f2c446438668a500225c0deb
Reviewed-on: https://chromium-review.googlesource.com/1065145
Commit-Queue: Ella Ge <eirage@chromium.org>
Reviewed-by: David Bokan <bokan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563144}
Former-commit-id: 62e790d79814eada990712d4ee4300bc765ce897