third_party/blink/renderer/core/html/image_document.cc
@@ -454,7 +454,8 @@ int ImageDocument::CalculateDivWidth() {
   //   of the frame.
   // * Images smaller in either dimension are centered along that axis.
   int viewport_width =
-      GetFrame()->GetPage()->GetVisualViewport().Size().Width();
+      GetFrame()->GetPage()->GetVisualViewport().Size().Width() /
+      GetFrame()->PageZoomFactor();
 
   // For huge images, minimum-scale=0.1 is still too big on small screens.
   // Set the <div> width so that the image will shrink to fit the width of the
