third_party/blink/renderer/core/html/image_document_test.cc
@@ -310,5 +310,99 @@ TEST_F(ImageDocumentViewportTest, HidingURLBarDoesntChangeImageLocation) {
   EXPECT_EQ(175, rect->y());
 }
 
+TEST_F(ImageDocumentViewportTest, ZoomForDSFScaleImage) {
+  v8::HandleScope handle_scope(v8::Isolate::GetCurrent());
+  SimRequest request("https://example.com/test.jpg", "image/jpeg");
+  LoadURL("https://example.com/test.jpg");
+
+  Vector<unsigned char> jpeg = JpegImage();
+  Vector<char> data = Vector<char>();
+  data.Append(jpeg.data(), jpeg.size());
+  request.Complete(data);
+
+  HTMLImageElement* img = GetDocument().ImageElement();
+
+  // no zoom
+  WebView().Resize(IntSize(100, 100));
+  WebView().SetZoomFactorForDeviceScaleFactor(1.f);
+  Compositor().BeginFrame();
+  EXPECT_EQ(50u, img->width());
+  EXPECT_EQ(50u, img->height());
+  EXPECT_EQ(100, GetDocument().CalculateDivWidth());
+  EXPECT_EQ(1.f, GetVisualViewport().Scale());
+  EXPECT_EQ(100, GetVisualViewport().Width());
+  EXPECT_EQ(100, GetVisualViewport().Height());
+
+  // zoom-for-dsf = 4. WebView size is in physical pixel(400*400), image and
+  // visual viewport should be same in CSS pixel, as no dsf applied.
+  // This simulates running on two phones with different screen densities but
+  // same (physical) screen size, image document should displayed the same.
+  WebView().Resize(IntSize(400, 400));
+  WebView().SetZoomFactorForDeviceScaleFactor(4.f);
+  Compositor().BeginFrame();
+  EXPECT_EQ(50u, img->width());
+  EXPECT_EQ(50u, img->height());
+  EXPECT_EQ(100, GetDocument().CalculateDivWidth());
+  EXPECT_EQ(1.f, GetVisualViewport().Scale());
+  EXPECT_EQ(100, GetVisualViewport().Width());
+  EXPECT_EQ(100, GetVisualViewport().Height());
+}
+
+// Tests that with zoom factor for device scale factor, image with different
+// size fit in the viewport correctly.
+TEST_F(ImageDocumentViewportTest, DivWidthWithZoomForDSF) {
+  v8::HandleScope handle_scope(v8::Isolate::GetCurrent());
+  SimRequest request("https://example.com/test.jpg", "image/jpeg");
+  LoadURL("https://example.com/test.jpg");
+
+  Vector<unsigned char> jpeg = JpegImage();
+  Vector<char> data = Vector<char>();
+  data.Append(jpeg.data(), jpeg.size());
+  request.Complete(data);
+
+  HTMLImageElement* img = GetDocument().ImageElement();
+
+  WebView().SetZoomFactorForDeviceScaleFactor(2.f);
+
+  // Image smaller then webview size, visual viewport is not zoomed, and image
+  // will be centered in the viewport.
+  WebView().Resize(IntSize(200, 200));
+  Compositor().BeginFrame();
+  EXPECT_EQ(50u, img->width());
+  EXPECT_EQ(50u, img->height());
+  EXPECT_EQ(100, GetDocument().CalculateDivWidth());
+  EXPECT_EQ(1.f, GetVisualViewport().Scale());
+  EXPECT_EQ(100, GetVisualViewport().Width());
+  EXPECT_EQ(100, GetVisualViewport().Height());
+  DOMRect* rect = img->getBoundingClientRect();
+  EXPECT_EQ(25, rect->x());
+  EXPECT_EQ(25, rect->y());
+
+  // Image wider than webview size, image should fill the visual viewport, and
+  // visual viewport zoom out to 0.5.
+  WebView().Resize(IntSize(50, 50));
+  Compositor().BeginFrame();
+  EXPECT_EQ(50u, img->width());
+  EXPECT_EQ(50u, img->height());
+  EXPECT_EQ(50, GetDocument().CalculateDivWidth());
+  EXPECT_EQ(0.5f, GetVisualViewport().Scale());
+  EXPECT_EQ(50, GetVisualViewport().Width());
+  EXPECT_EQ(50, GetVisualViewport().Height());
+
+  // When image is more than 10X wider than webview, shrink the image to fit the
+  // width of the screen.
+  WebView().Resize(IntSize(4, 20));
+  Compositor().BeginFrame();
+  EXPECT_EQ(20u, img->width());
+  EXPECT_EQ(20u, img->height());
+  EXPECT_EQ(20, GetDocument().CalculateDivWidth());
+  EXPECT_EQ(0.1f, GetVisualViewport().Scale());
+  EXPECT_EQ(20, GetVisualViewport().Width());
+  EXPECT_EQ(100, GetVisualViewport().Height());
+  rect = img->getBoundingClientRect();
+  EXPECT_EQ(0, rect->x());
+  EXPECT_EQ(40, rect->y());
+}
+
 #undef MAYBE
 }  // namespace blink
